--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -128,7 +128,7 @@
   \or
     \def\colortemp{Purple}
   \fi
-  \textcolor{\colortemp}{\text{\FiveStar}^{\scriptscriptstyle#1}}
+  \textcolor{\colortemp}{\text{{\tiny \FiveStar}}^{\scriptscriptstyle#1}}
   \endgroup
 }
 
