Update ejercicios de parcial guia 5

--- a/4-guia/ejercicios-4-extra/ej-extra-18-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-18-4.tex
@@ -66,7 +66,7 @@ $$
     (a,b) & = & (2^1 \cdot 3^1 \cdot 5^{\cyan{1}} \cdot 7^{\red{2}}\ ,\  2^1 \cdot 3^3 \cdot 7^{\red{1}} ) & = & (1470,378) \\
     (a,b) & = & (2^1 \cdot 3^1 \cdot 5^{\cyan{1}} \cdot 7^{\red{1}}\ ,\  2^1 \cdot 3^3 \cdot 7^{\red{2}} ) & = & (210,2646) \\
     (a,b) & = & (2^1 \cdot 3^1 \cdot 5^{\cyan{0}} \cdot 7^{\red{2}}\ ,\  2^1 \cdot 3^3 \cdot 7^{\red{1}} ) & = & (294,378)  \\
-    (a,b) & = & (2^1 \cdot 3^1 \cdot 5^{\cyan{0}} \cdot 7^{\red{1}}\ ,\  2^1 \cdot 3^3 \cdot 7^{\red{2}} ) & = & (42,2646)  \\
+    (a,b) & = & (2^1 \cdot 3^1 \cdot 5^{\cyan{0}} \cdot 7^{\red{1}}\ ,\  2^1 \cdot 3^3 \cdot 7^{\red{2}} ) & = & (42,2646)
   \end{array}
 $$
 
