--- a/5-guia/ejercicios-5-extra/ej-extra-6-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-6-5.tex
@@ -1,12 +1,44 @@
-\ejExtra
-Hallar el resto de la división de $12^{2^n}$ por 7 para cada $n \en \naturales$
+\begin{enunciado}{\ejExtra}
+  Hallar el resto de la división de $12^{2^n}$ por 7 para cada $n \en \naturales$
+\end{enunciado}
 
-\separadorCorto
+Arrancamos con un descontracturamente masajeo del enunciado:
+$$
+  \congruencia{12^{2^n}}{5^{2^n}}{7}
+$$
+Busco entonces:
+$$
+  r_7(5^{2^n})
+$$
 
-R:\\
-$
-\congruencia{12^{2^n}}{4}{7} \text{ si } n \text{ impar}\\
-\congruencia{12^{2^n}}{2}{7} \text{ si } n \text{ par}\\
-$
+Ataco con PTF, 7 es primo y $7 \noDivide 5$:
+$$
+  \congruencia{5^{2^n}}{X}{7}
+  \sii
+  \congruencia{5^{2^n}}{5^{r_6(2^n)}}{7}
+$$
 
-\red{pasar}
+Tabla de restos para estudiar ese horrible exponente:
+$$
+  \begin{array}{|c||c|c|c|c|c|c|}
+    \hline
+    r_6(n)       & 0 & 1 & 2 & 3 & 4 & 5 \\ \hline
+    r_6(2^n)     & 1 & 2 & 4 & 2 & 4 & 2 \\ \hline\hline
+    r_7(5^{2^n}) & 4 & 2 & 4 & 2 & 4 & 2 \\ \hline
+  \end{array}
+$$
+
+La tabla es muy sugestiva:
+$$
+  \begin{array}{rcl}
+    r_7(12^{2^n}) & = & 2 \text{ si } n \text{ par} \\
+    r_7(12^{2^n}) & = & 4 \text{ si } n \text{ impar}
+  \end{array}
+$$
+
+% Contribuciones
+\begin{aportes}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
+\end{aportes}
+
