Agrego mitad del extra 1 y corrijo extra 12 guia 5

--- a/5-guia/ejercicios-5-extra/ej-extra-12-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-12-5.tex
@@ -1,85 +1,142 @@
 \begin{enunciado}{\ejExtra}
-	Determinar todos los primos $p \en \naturales$ que satisfacen que:
-	$$
-		5p \divideA 6^{p-1} + 10^{p^2} + 119
-	$$
+  Determinar todos los primos $p \en \naturales$ que satisfacen que:
+  $$
+    5p \divideA 6^{p-1} + 10^{p^2} + 119
+  $$
 \end{enunciado}
 Si $ 5p \divideA 6^{p-1} + 10^{p^2} + 119$ entonces:
 $$
-	p \divideA 6^{p-1} + 10^{p^2} + 119
+  p \divideA 6^{p-1} + 10^{p^2} + 119
 $$
 y ahí puedo sacar info sobre $p$:
 $$
-	p \divideA 6^{p-1} + 10^{p^2} + 119
-	\Sii{def}[\red{!}]
-	\congruencia{6^{p-1} + 10^{p^2} + 119}{0}{p}
+  p \divideA 6^{p-1} + 10^{p^2} + 119
+  \Sii{def}[\red{!}]
+  \congruencia{6^{p-1} + 10^{p^2} + 119}{0}{p}
 $$
 Las factorizaciones en primos de los números del ejercicio:
 $$
-	\congruencia{(2\cdot 3)^{p-1} + (2 \cdot 5)^{p^2} + 17 \cdot 3^2}{0}{p} \llamada1
+  \congruencia{(2\cdot 3)^{p-1} + (2 \cdot 5)^{p^2} + 17 \cdot 7}{0}{p} \llamada1
 $$
 
 Si $p = 2$ en $\llamada1$:
 $$
-	\congruencia{0 + 0 + 1}{0}{2}
+  \congruencia{0 + 0 + 1}{0}{2}
 $$
-$p = 2$, no sirve $\llamada2$
+$p = 2$, no sirve $\llamada2$.
+
+\bigskip
 
 Si $p = 3$ en $\llamada1$:
 $$
-	\congruencia{0 + 1 + 0}{0}{3}
+  \congruencia{0 + 1 + 2}{0}{3}
 $$
-$p = 3$, tampoco sirve.
+\fcolorbox{orange}{white}{$p = 3$, sí sirve.} $\llamada3$
+
+\bigskip
 
 Si $p = 5$ en $\llamada1$:
 $$
-	\congruencia{1 + 0 -1}{0}{5}
+  \congruencia{1 + 0 -1}{0}{5}
 $$
-\fcolorbox{orange}{white}{$p = 5$, sí sirve.} $\llamada3$
+\fcolorbox{orange}{white}{$p = 5$, sí sirve.} $\llamada4$
+
+\bigskip
 
 Si $p = 17$ en $\llamada1$:
 $$
-	\congruencia{6^0 + 10^1}{0}{17}
+  \congruencia{6^0 + 10^1}{0}{17}
 $$
-$p = 17$, tampoco sirve.
+$p = 17$, no sirve.$\llamada5$
+
+\bigskip
 
 \bigskip
 
 Hago el caso con $p$ genérico $\llamada1$:
 $$
-	\congruencia{6^{p-1} + 10^{p^2} + 119}{0}{p}
-	\Sii{PTF}
-	\congruencia{6^0 + 10^1 + 119}{0}{p}
-	\sii
-	\congruencia{130}{0}{p}
-	\sii
-	\congruencia{2 \cdot 5 \cdot 13}{0}{p}
+  \congruencia{6^{p-1} + 10^{p^2} + 119}{0}{p}
+  \Sii{PTF}
+  \congruencia{6^0 + 10^1 + 119}{0}{p}
+  \sii
+  \congruencia{130}{0}{p}
+  \sii
+  \congruencia{2 \cdot 5 \cdot 13}{0}{p}
 $$
-De $\llamada2$ y $\llamada3$ sé que el 2 no sirve pero el 5 sí. Agrego el 13 que también funciona.
+Encuentro de esta forma que el \fcolorbox{orange}{white}{$p = 13$, sí sirve.} $\llamada6$
 
-Todo muy lindo, ahora quiero ver si
-$$
-	\begin{array}{rcl}
-		5 \cdot 5 \divideA 6^{p-1} + 10^{p^2} + 119
-		 & \sii   &
-		\congruencia{6^{24} + 10^{624} + 19}{0}{25}
-		\Sii{PTF}
-		\congruencia{6^0 + 10^1 + 19 \conga{25} 5}{0}{25} \red{\skull}
-		\\
-		 & \ytext & \\
-		5 \cdot 13 \divideA 6^{p-1} + 10^{p^2} + 119
-		 & \sii   &
-		\congruencia{6^{64} + 10^{4225} + 54}{0}{65}
-		\Sii{PTF}
-		\congruencia{6^0 + 10^1 + 54 \conga{65} 0}{0}{25} \red{\Tilde}
-	\end{array}
-$$
-Se concluye de esta forma que el único $p$ primo que cumple que
-$5p \divideA 6^{p-1} + 10^{p^2} + 119$ es \fcolorbox{orange}{white}{$p = 13$}
+\bigskip
 
+\bigskip
+
+
+De $\llamada2, \llamada3, \llamada4, \llamada5$ y $\llamada6$ sé que el 2 y el 17 no sirven pero 3, 5 y 13 sí.
+
+\bigskip
+
+Todo muy lindo, ahora quiero ver si para $p = 3$:
+$$
+  5 \cdot 3 \divideA 6^{p-1} + 10^{p^2} + 119
+  \Sii{def}
+  \congruencia{6^2 + 10^9 + 14}{0}{15}
+  \Sii{\red{!!!}}
+  \congruencia{6 + 10 + 14}{0}{15} \Tilde
+$$
+En \red{!!!} cálculo fue el de $\congruencia{10^9}{10}{15}:\quad
+  \congruencia{X}{10^9}{15}
+  \leftrightsquigarrow
+  \llave{l}{
+    \congruencia{X}{0}{5} \\
+    \congruencia{X}{1}{3}
+  }
+  \Entonces{TCH}
+  \congruencia{X}{10}{15}
+$
+
+Ahora para $p = 5$:
+$$
+  5 \cdot 5 \divideA 6^{p-1} + 10^{p^2} + 119
+  \Sii{def}
+  \congruencia{6^4 + 10^{25} + 19}{0}{25}
+  \Sii{\red{!}}
+  \congruencia{21 + 0 + 19}{15 \not\equiv 0 }{25} \quad\red{\skull}
+$$
+
+\bigskip
+
+\text{Para $p = 13$}:
+$$
+  5 \cdot 13 \divideA 6^{12} + 10^{169} + 119
+  \sii
+  \congruencia{6^{12} + 10^{169} + 54}{0}{65}
+  \Sii{\red{!!!}}
+  \congruencia{1 + 10 + 54}{0}{65}
+$$
+En \red{!!!} como se hizo antes el cálculo fue el de $\congruencia{10^{169}}{10}{65}$:
+$$
+  \congruencia{X}{10^{169}}{65}
+  \leftrightsquigarrow
+  \llave{l}{
+    \congruencia{X}{0}{5} \\
+    \congruencia{X}{10^{169}}{13}
+    \Sii{PTF}
+    \congruencia{X}{10}{13}
+  }
+  \Entonces{TCH}
+  \congruencia{X}{10}{65}
+$$
+
+\bigskip
+
+Se concluye de esta forma que los únicos $p$ primos que cumplen que $5p \divideA 6^{p-1} + 10^{p^2} + 119$ son:
+$$
+  \fcolorbox{orange}{white}{$p \en \set{3, 13}$}
+$$
 
 % Contribuciones
 \begin{aportes}
-	%% iconos : \github, \instagram, \tiktok, \linkedin
-	\item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\neverGonnaGiveYouUp}{Nacho \youtube}
+  \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
 \end{aportes}
