--- a/5-guia/ejercicios-5-extra/ej-extra-11-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-11-5.tex
@@ -122,4 +122,5 @@ $$
 
 \begin{aportes}
   \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
 \end{aportes}
